--- a/web/dartmon.html
+++ b/web/dartmon.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="dartmon.css">
   </head>
   <body>
-    <script type="application/dart" src="dartmon.dart"></script>
+    <script type="application/dart" src="../lib/dartmon.dart"></script>
     <script src="packages/browser/dart.js"></script>
   </body>
 </html>
